# v2-backend

./: .gitignore  pyproject.toml
.obsidian/cakeinlaw/.obsidian/: workspace.json
.obsidian/cakeinlaw/Слои/: Models.md
app/: .env.example  alembic.ini  enums.py  main.py  settings.py  test.py
app/_migrations/: env.py  script.py.mako
app/_migrations/scripts/: __init__.py  disallow_empty.py  schemas.py  utils.py
app/_migrations/versions/: 69ca8da8b9c8_init.py  e5d9990abe28_init.py  f7129a054625_init.py
app/core/: constants.py  settings.py  type_transformers.py  types.py
app/core/db/: __init__.py  _init_models.py  conf.py  connection.py  hybrid.py  hybrid_properties.py
app/core/filters/: __init__.py  _base.py  _builders.py  columns.py  groups.py
app/core/repositories/: __init__.py  _base.py  _object.py  directory.py  document.py  exceptions.py  list.py  registry.py
app/core/repositories_/: __init__.py  _base.py  _object.py  _registry.py  directory.py  document.py  list.py
app/core/schema/: __init__.py  _base.py  _types.py  app.py  enums.py  models.py
app/core/schema_collectors/: __init__.py  _base.py  enums.py  models.py
app/core/schema_generators/: __init__.py  base.py  gen_property.py
app/core/schemas/: __init__.py  _enums.py  app.py  enums.py
app/core/smart_queries/: _base.py
app/core/utils/: __init__.py  decorators.py  funcs.py  imports.py  lazy.py  string.py
app/core/validators/: exceptions.py  lists.py  models.py  objects.py
app/directories/employees/: models.py  repository.py
app/directories/users/: models.py  repository.py
(+144 files in other folders)
