[tool.poetry]
name = "cakeinlaw"
version = "2.0a"
description = ""
authors = ["alta7700 <alta7700@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "0.105.0"}
sqlalchemy = {extras = ["asyncio"], version = "2.0.23"}
alembic = "1.13.0"
asyncpg = "0.29.0"

passlib = "1.7.4"
cryptography = "41.0.7"
bcrypt = "4.1.1"


[tool.poetry.group.dev.dependencies]
black = "23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
